kubernetes/base/flasher/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
        - name: public-storage
          emptyDir: {} # Persistent ?
        - name: media-library
          emptyDir: {} # Persistent ?
        - name: public-vendor
          emptyDir: {}
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "php" # Alias for nginx to point to php container
      imagePullSecrets:
        - name: gitlab-registry
      enableServiceLinks: false
      containers:
        - image: nginx
          name: nginx
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: public-storage
              mountPath: /var/www/html/storage/app/public
            - name: public-vendor
              mountPath: /var/www/html/public/vendor
          ports:
            - name: nginx-web
              containerPort: 80
          readinessProbe:
            periodSeconds: 10
            httpGet:
              path: /api/monitor
              port: 80
        - image: php
          name: php
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: public-storage
              mountPath: /var/www/html/storage/app/public
            - name: public-vendor
              mountPath: /var/www/html/public/vendor
            - name: media-library
              mountPath: /var/www/html/storage/media-library
          ports:
            - name: php-fpm
              containerPort: 9000
        - image: php
          name: worker
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: public-storage
              mountPath: /var/www/html/storage/app/public
            - name: public-vendor
              mountPath: /var/www/html/public/vendor
            - name: media-library
              mountPath: /var/www/html/storage/media-library
