kubernetes/base/flasher/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
    service: api
spec:
  ports:
    - name: http-api
      port: 80
      protocol: TCP
  selector:
    app: api
